--- a/perfiles/Draksis.html
+++ b/perfiles/Draksis.html
@@ -250,7 +250,7 @@
     <div class="profile-container">
         <div class="profile-header">
             <div class="profile-cover"></div>
-            <img src="img/Tartas.jpg" alt="Perfil" width="150" class="profile-pic">
+            <img src="img/tartas.jpg" alt="Perfil" width="150" class="profile-pic">
             <div class="title-badge"></div>
         <div class="profile-info">
             <h1>Draksis_343</h1>
@@ -264,7 +264,7 @@
         <div class="achievements-section">
     <div class="achievement-group">
         <div class="group-header" onclick="toggleAchievements(this)">
-            <img src="img/Titulo.png" alt="Evento 1" class="group-image">
+            <img src="img/titulo.png" alt="Evento 1" class="group-image">
             <div class="group-title">I.N.F.E.S.T.</div>
         </div>
         <div class="group-content">
