--- a/eventos/INFEST.html
+++ b/eventos/INFEST.html
@@ -114,6 +114,31 @@
             <div class="event-description">
                 Esta serie se desarrolla en un mundo postapocalíptico donde la humanidad lucha por sobrevivir contra hordas de infectados, obsesionados con propagar el hongo que ha provocado el colapso de la civilización. El juego se llevará a cabo en modo ultra hardcore, donde la regeneración de vida solo será posible mediante medicamentos. Para equilibrar la dificultad, los jugadores contarán con tres vidas. Sin embargo, una vez agotadas, será el fin del juego. El objetivo es sobrevivir hasta el día 30, alcanzando un campamento aislado que ofrece protección total contra los infectados. ¿Quién logrará llegar al refugio final y asegurar su supervivencia?
             </div>
+            <section id="bases-y-reglas">
+  <!-- Bases -->
+  <h2>Bases para Participar</h2>
+  <p>
+    Para participar en esta serie de rol post-apocalíptica, es importante cumplir con las siguientes bases:
+  </p>
+  <ul>
+    <li>Tener gusto por el rol, ya que la serie será 100% basada en la interpretación de personajes en un mundo post-apocalíptico.</li>
+    <li>Los roles serán asignados de manera aleatoria a los participantes, sin posibilidad de elegir.</li>
+    <li>Es necesario equiparse lo más rápido posible, ya que la dificultad aumentará progresivamente conforme avance la serie.</li>
+    <li>Los participantes contarán con <strong>3 vidas</strong>; si las pierden todas, será <strong>Game Over</strong>.</li>
+    <li>La serie tendrá una duración de 10 a 15 días no consecutivos, jugando <strong>1 día por semana</strong>.</li>
+    <li>Las sesiones tendrán una duración de 2 a 3 horas y se abrirá el host entre las <strong>9:00 p.m.</strong> y <strong>10:00 p.m.</strong>.</li>
+    <li>Los participantes deben aceptar las reglas y condiciones para garantizar una experiencia adecuada para todos.</li>
+  </ul>
+
+  <!-- Reglas -->
+  <h2>Reglas del Juego</h2>
+  <ol>
+    <li>No habrá PVP al inicio de la serie. El fuego amigo estará habilitado, pero está prohibido eliminar a otros jugadores intencionalmente (las muertes accidentales no tendrán sanción).</li>
+    <li>Respetar a los demás. Aunque el rol puede incluir insultos o comportamientos conflictivos, esto no debe pasar del ámbito del roleo. Cualquier exceso será sancionado.</li>
+    <li>Si ven a un admin realizando modificaciones en el terreno para preparar actividades, deben ignorarlo y continuar como si no estuviera presente.</li>
+    <li>Es obligatorio seguir las órdenes y objetivos indicados por el “Tipo de la Radio”, ya que serán esenciales para el desarrollo de la serie.</li>
+  </ol>
+</section>
             <a href="https://forms.gle/tBVuPwSFH2pbRkS97" class="event-link">Participar</a>
         </div>
     </div>
