--- a/perfiles/Roy.html
+++ b/perfiles/Roy.html
@@ -250,7 +250,7 @@
     <div class="profile-container">
         <div class="profile-header">
             <div class="profile-cover"></div>
-            <img src="img/Roy.jpeg" alt="Perfil" width="150" class="profile-pic">
+            <img src="img/RoyP.jpeg" alt="Perfil" width="150" class="profile-pic">
             <div class="title-badge"></div>
         <div class="profile-info">
             <h1>TheRoggers</h1>
