--- a/perfiles/Darkplayer.html
+++ b/perfiles/Darkplayer.html
@@ -184,7 +184,7 @@
             width: 100%;
             height: 200px;
             border-radius: 5px;
-            background: url('img/skibidi.jpeg') center/cover no-repeat;
+            background: url('img/TartasPo.jpeg') center/cover no-repeat;
         }
         .profile-pic {
             width: 150px;
@@ -250,7 +250,7 @@
     <div class="profile-container">
         <div class="profile-header">
             <div class="profile-cover"></div>
-            <img src="img/Tartas.jpg" alt="Perfil" width="150" class="profile-pic">
+            <img src="img/TartasP.jpeg" alt="Perfil" width="150" class="profile-pic">
             <div class="title-badge"></div>
         <div class="profile-info">
             <h1>Darkplayer1997</h1>
@@ -381,10 +381,10 @@
                         </div>
             </div>
             <div class="achievement-card">
-                <img src="img/logros/infest/Oculto.png" alt="Logro 2">
+                <img src="img/logros/infest/Impecable.png" alt="Logro 2">
                 <div class="tooltip">
-                    <strong>Oculto</strong><br>
-                         ???
+                    <strong>Impecable</strong><br>
+                         No mueras ni una sola vez
                         </div>
             </div>
             <div class="achievement-card">
