--- a/perfiles/Darkplayer.html
+++ b/perfiles/Darkplayer.html
@@ -264,7 +264,7 @@
         <div class="achievements-section">
     <div class="achievement-group">
         <div class="group-header" onclick="toggleAchievements(this)">
-            <img src="img/titulo.png" alt="Evento 1" class="group-image">
+            <img src="img/Titulo.png" alt="Evento 1" class="group-image">
             <div class="group-title">I.N.F.E.S.T.</div>
         </div>
         <div class="group-content">
