--- a/perfiles/Roy.html
+++ b/perfiles/Roy.html
@@ -297,7 +297,7 @@
                         </div>
             </div>
             <div class="achievement-card">
-                <img src="img/logros/infest/Impecable.png" alt="Logro 2">
+                <img src="img/logros/infest/Impecable - Bloqueado.png" alt="Logro 2">
                 <div class="tooltip">
                     <strong>Impecable</strong><br>
                          No mueras ni una sola vez
