--- a/perfiles/Darkplayer.html
+++ b/perfiles/Darkplayer.html
@@ -297,10 +297,10 @@
                         </div>
             </div>
             <div class="achievement-card">
-                <img src="img/logros/infest/Oculto.png" alt="Logro 2">
+                <img src="img/logros/infest/Impecable - Bloqueado.png" alt="Logro 2">
                 <div class="tooltip">
-                    <strong>Oculto</strong><br>
-                         ???
+                    <strong>Impecable</strong><br>
+                         No mueras ni una sola vez
                         </div>
             </div>
             <div class="achievement-card">
