--- a/perfiles/Aki.html
+++ b/perfiles/Aki.html
@@ -184,7 +184,7 @@
             width: 100%;
             height: 200px;
             border-radius: 5px;
-            background: url('img/skibidi.jpeg') center/cover no-repeat;
+            background: url('img/AkiPo.jpeg') center/cover no-repeat;
         }
         .profile-pic {
             width: 150px;
@@ -250,7 +250,7 @@
     <div class="profile-container">
         <div class="profile-header">
             <div class="profile-cover"></div>
-            <img src="img/Tartas.jpg" alt="Perfil" width="150" class="profile-pic">
+            <img src="img/AkiP.jpeg" alt="Perfil" width="150" class="profile-pic">
             <div class="title-badge"></div>
         <div class="profile-info">
             <h1>Akiaseru</h1>
