--- a/perfiles/Draksis.html
+++ b/perfiles/Draksis.html
@@ -250,7 +250,7 @@
     <div class="profile-container">
         <div class="profile-header">
             <div class="profile-cover"></div>
-            <img src="img/DraksisP.jpg" alt="Perfil" width="150" class="profile-pic">
+            <img src="img/DraksisP.jpeg" alt="Perfil" width="150" class="profile-pic">
             <div class="title-badge"></div>
         <div class="profile-info">
             <h1>Draksis_343</h1>
