--- a/perfiles/Draksis.html
+++ b/perfiles/Draksis.html
@@ -184,7 +184,7 @@
             width: 100%;
             height: 200px;
             border-radius: 5px;
-            background: url('img/DraksisPo.jpeg') center/cover no-repeat;
+            background: url('img/DraksisPo.jpg') center/cover no-repeat;
         }
         .profile-pic {
             width: 150px;
