--- a/perfiles/Draksis.html
+++ b/perfiles/Draksis.html
@@ -256,7 +256,7 @@
             <h1>Draksis_343</h1>
             <h2>----</h2>
             <p>Desde: 23/01/2025</p>
-            <p>Me la pelan</p>
+            <p>Someone else...</p>
         </div>
         </div>
 
