--- a/eventos/INFEST.html
+++ b/eventos/INFEST.html
@@ -91,7 +91,7 @@
             background-color: #e6b800;
         }
         .studio-logo {
-            position: fixed;
+            position: absolute;
             top: 10px;
             center: 10px;
             width: 100px;
