--- a/perfiles/Aki.html
+++ b/perfiles/Aki.html
@@ -16,7 +16,7 @@
             padding: 20px;
         }
         .navbar {
-            position: fixed;
+            position: absolute;
             left: 0;
             top: 0;
             width: 250px;
@@ -161,7 +161,7 @@
     opacity: 1; /* Aparece con una transición suave */
 }
 .studio-logo {
-            position: fixed;
+            position: absolute;
             top: 10px;
             center: 10px;
             width: 100px;
