--- a/perfiles/Darkplayer.html
+++ b/perfiles/Darkplayer.html
@@ -26,6 +26,7 @@
             transform: translateX(-100%);
             transition: transform 0.3s ease;
             padding-top: 60px;
+            z-index: 1000;
         }
         .navbar.show-navbar {
             transform: translateX(0);
