--- a/eventos/INFEST.html
+++ b/eventos/INFEST.html
@@ -139,7 +139,7 @@
     <li>Es obligatorio seguir las órdenes y objetivos indicados por el “Tipo de la Radio”, ya que serán esenciales para el desarrollo de la serie.</li>
   </ol>
 </section>
-            <a href="https://forms.gle/tBVuPwSFH2pbRkS97" class="event-link">Participar</a>
+            <a href="https://forms.gle/tBVuPwSFH2pbRkS97" class="event-link" target="_blank">Participar</a>
         </div>
     </div>
 
