--- a/perfiles/Darkplayer.html
+++ b/perfiles/Darkplayer.html
@@ -64,7 +64,7 @@
             width: 100%;
             height: 200px;
             border-radius: 5px;
-            background: url('img/TartasPo.jpg') center/cover no-repeat;
+            background: url('img/TartasPo.png') center/cover no-repeat;
         }
         .profile-pic {
             width: 150px;
