--- a/perfiles/Darkplayer.html
+++ b/perfiles/Darkplayer.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Draksis_343</title>
+    <title>Darkplayer97</title>
     <style>
         body {
             margin: 0;
@@ -274,7 +274,7 @@
             <img src="img/TartasP.jpeg" alt="Perfil" width="150" class="profile-pic">
             <div class="title-badge"></div>
             <div class="profile-info">
-                <h1>Draksis_343</h1>
+                <h1>Darkplayer97</h1>
                 <h2>----</h2>
                 <p>Desde: 23/01/2025</p>
                 <p>...</p>
