--- a/perfiles/Aki.html
+++ b/perfiles/Aki.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Draksis_343</title>
+    <title>Akiaseru</title>
     <style>
         body {
             margin: 0;
@@ -64,7 +64,7 @@
             width: 100%;
             height: 200px;
             border-radius: 5px;
-            background: url('img/AkiPo.jpg') center/cover no-repeat;
+            background: url('img/AkiPo.jpeg') center/cover no-repeat;
         }
         .profile-pic {
             width: 150px;
@@ -277,7 +277,7 @@
                 <h1>Akiaseru</h1>
                 <h2>----</h2>
                 <p>Desde: 23/01/2025</p>
-                <p>Cerros y sexo</p>
+                <p>Estoy vivo...</p>
             </div>
         </div>
         <div class="achievements-section">
