--- a/index.html
+++ b/index.html
@@ -3,24 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="finisher-header.es5.min.js" type="text/javascript"></script>
     <title>Página de Inicio</title>
+    
     <style>
-        body {
+        * {
             margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        body {
             font-family: Arial, sans-serif;
             background-color: #1c1c1c;
             color: white;
             display: flex;
             flex-direction: column;
             align-items: center;
-            justify-content: center;
-            height: 100vh;
+            justify-content: center; /* Centra el contenido */
+            height: 100vh; /* Ajusta el body a la pantalla completa */
+            overflow: hidden; /* Evita scroll */
+            position: relative; /* Para que los elementos estén sobre el fondo */
         }
+
         .logo {
             width: 350px;
             height: auto;
-            margin-bottom: 5px;
+            margin-bottom: 20px;
+            z-index: 1; /* Asegura que el logo esté sobre la animación */
         }
+
         .start-button {
             display: inline-block;
             padding: 10px 20px;
@@ -31,14 +43,72 @@
             font-size: 18px;
             border-radius: 5px;
             transition: background 0.3s;
+            z-index: 1;
         }
+
         .start-button:hover {
             background-color: #e6b800;
+        }
+
+        /* FONDO ANIMADO */
+        .header.finisher-header {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100vw;
+            height: 100vh;
+            z-index: 0; /* Debajo del contenido */
         }
     </style>
 </head>
 <body>
+
     <img src="img/TKORC.png" alt="Logo" class="logo">
     <a href="eventos.html" class="start-button">INICIAR</a>
+
+    <div class="header finisher-header"></div>
+
+    <script type="text/javascript">
+        new FinisherHeader({
+            "count": 90,
+            "size": {
+                "min": 1,
+                "max": 20,
+                "pulse": 0
+            },
+            "speed": {
+                "x": {
+                    "min": 0,
+                    "max": 0.4
+                },
+                "y": {
+                    "min": 0,
+                    "max": 0.1
+                }
+            },
+            "colors": {
+                "background": "#1c1c1c",
+                "particles": [
+                    "#ffcc00",
+                    "#00b0ff",
+                    "#ff0000",
+                    "#00ff41",
+                    "#f000ff"
+                ]
+            },
+            "blending": "screen",
+            "opacity": {
+                "center": 0,
+                "edge": 0.4
+            },
+            "skew": -2,
+            "shapes": [
+                "c",
+                "s",
+                "t"
+            ]
+        });
+    </script>
+
 </body>
 </html>
