--- a/miembros.html
+++ b/miembros.html
@@ -118,6 +118,13 @@
                 <div class="member-name">TheRoggers</div>
             </a>
         </div>
+             <!-- Add more member cards as needed -->
+        <div class="members-container">
+        <div class="member-card">
+            <a href="perfiles/Rama.html">
+                <div class="member-name">elramasan</div>
+            </a>
+        </div>
 
 
     </div>
