--- a/eventos/INFEST.html
+++ b/eventos/INFEST.html
@@ -129,7 +129,7 @@
     <li>Los roles serán asignados de manera aleatoria a los participantes, sin posibilidad de elegir.</li>
     <li>Es necesario equiparse lo más rápido posible, ya que la dificultad aumentará progresivamente conforme avance la serie.</li>
     <li>Los participantes contarán con <strong>3 vidas</strong>; si las pierden todas, será <strong>Game Over</strong>.</li>
-    <li>La serie tendrá una duración de 10 días no consecutivos, jugando <strong>1 día por semana</strong>.</li>
+    <li>La serie tendrá una duración de 10 días no consecutivos, jugando <strong>2 días por semana</strong>.</li>
     <li>Las sesiones tendrán una duración de 2 a 3 horas y se abrirá el host entre las <strong>9:00 p.m.</strong> y <strong>10:00 p.m.</strong>.</li>
     <li>Los participantes deben aceptar las reglas y condiciones para garantizar una experiencia adecuada para todos.</li>
   </ul>
