--- a/eventos/INFEST.html
+++ b/eventos/INFEST.html
@@ -57,6 +57,7 @@
             background-color: #333;
             border-radius: 10px;
             overflow: hidden;
+            padding: 30px;
         }
         .event-image {
             width: 100%;
