--- a/eventos/INFEST.html
+++ b/eventos/INFEST.html
@@ -57,7 +57,7 @@
             background-color: #333;
             border-radius: 10px;
             overflow: hidden;
-            padding: 30px;
+            margin-bottom: 60px;
         }
         .event-image {
             width: 100%;
