--- a/miembros.html
+++ b/miembros.html
@@ -125,7 +125,53 @@
                 <div class="member-name">elramasan</div>
             </a>
         </div>
+<!-- Add more member cards as needed -->
+        <div class="members-container">
+        <div class="member-card">
+            <a href="perfiles/Roy.html">
+                <div class="member-name">ItzyOwO</div>
+            </a>
+        </div>
 
+<!-- Add more member cards as needed -->
+        <div class="members-container">
+        <div class="member-card">
+            <a href="perfiles/Roy.html">
+                <div class="member-name">Hugofish</div>
+            </a>
+        </div>
+
+        <!-- Add more member cards as needed -->
+        <div class="members-container">
+        <div class="member-card">
+            <a href="perfiles/Roy.html">
+                <div class="member-name">AYSU</div>
+            </a>
+        </div>
+
+<!-- Add more member cards as needed -->
+        <div class="members-container">
+        <div class="member-card">
+            <a href="perfiles/Roy.html">
+                <div class="member-name">Nishinoiya</div>
+            </a>
+        </div>
+
+        <!-- Add more member cards as needed -->
+        <div class="members-container">
+        <div class="member-card">
+            <a href="perfiles/Roy.html">
+                <div class="member-name">JavsSanson</div>
+            </a>
+        </div>
+
+        <!-- Add more member cards as needed -->
+        <div class="members-container">
+        <div class="member-card">
+            <a href="perfiles/Roy.html">
+                <div class="member-name">Toxyvlog</div>
+            </a>
+        </div>
 
     </div>
 
