--- a/miembros.html
+++ b/miembros.html
@@ -71,7 +71,7 @@
             font-weight: bold;
         }
         .studio-logo {
-            position: fixed;
+            position: absolute;
             top: 10px;
             center: 10px;
             width: 100px;
