--- a/perfiles/Toxyvlog.html
+++ b/perfiles/Toxyvlog.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Draksis_343</title>
+    <title>Toxyvlog</title>
     <style>
         body {
             margin: 0;
@@ -64,7 +64,7 @@
             width: 100%;
             height: 200px;
             border-radius: 5px;
-            background: url('img/DraksisPo.jpg') center/cover no-repeat;
+            background: url('img/ToxyPo.jpeg') center/cover no-repeat;
         }
         .profile-pic {
             width: 150px;
@@ -271,13 +271,13 @@
     <div class="profile-container">
         <div class="profile-header">
             <div class="profile-cover"></div>
-            <img src="img/DraksisP.jpeg" alt="Perfil" width="150" class="profile-pic">
+            <img src="img/ToxyP.jpeg" alt="Perfil" width="150" class="profile-pic" onerror="this.onerror=null; this.src='img/placeholder.jpeg';">
             <div class="title-badge"></div>
             <div class="profile-info">
-                <h1>Draksis_343</h1>
+                <h1>Toxyvlog</h1>
                 <h2>----</h2>
-                <p>Desde: 01/01/2025</p>
-                <p>Someone else...</p>
+                <p>Desde: 10/02/2025</p>
+                <p>...</p>
             </div>
         </div>
         <div class="achievements-section">
@@ -363,8 +363,8 @@
 </div>
 
 <!-- Más secciones aquí-->
-<!--
-<div class="achievements-section">
+
+<!--<div class="achievements-section">
     <div class="achievement-group">
         <div class="group-header" onclick="toggleAchievements(this)">
             <img src="img/logros/infest/Oculto.png" alt="Evento 1" class="group-image">
@@ -374,58 +374,57 @@
             <div class="achievement-card">
                 <img src="img/logros/infest/Sobrevive 10 días - Bloqueado.png" alt="Logro 1">
                 <div class="tooltip">
-                    <strong>El que apenas</strong><br>
-                    <strong>se levanto</strong><br>
-                         Haz 5 tareas
+                    <strong>Superviviente</strong><br>
+                         Sobrevive 10 días
                         </div>
             </div>
             <div class="achievement-card">
                 <img src="img/logros/infest/Sobrevive 15 días - Bloqueado.png" alt="Logro 2">
                 <div class="tooltip">
-                    <strong>Agarrando el gusto</strong><br>
-                         Haz 10 tareas
+                    <strong>No es nada facil</strong><br>
+                         Sobrevive 15 días
                         </div>
             </div>
             <div class="achievement-card">
                 <img src="img/logros/infest/Sobrevive 25 días - Bloqueado.png" alt="Logro 2">
                 <div class="tooltip">
-                    <strong>Que chambeador!</strong><br>
-                         Haz 20 tareas
+                    <strong>Puedo con mas...</strong><br>
+                         Sobrevive 25 días
                         </div>
             </div>
             <div class="achievement-card">
                 <img src="img/logros/infest/Sobrevive 30 días - Bloqueado.png" alt="Logro 2">
                 <div class="tooltip">
-                    <strong>Intocable</strong><br>
-                         No mueras en 2 partidas seguidas
+                    <strong>Nada me detiene</strong><br>
+                         Sobrevive 30 días
                         </div>
             </div>
             <div class="achievement-card">
                 <img src="img/logros/infest/Oculto.png" alt="Logro 2">
                 <div class="tooltip">
-                    <strong>Triunfo el mal</strong><br>
-                         Gana una partida como impostor
+                    <strong>Oculto</strong><br>
+                         ???
                         </div>
             </div>
             <div class="achievement-card">
                 <img src="img/logros/infest/Oculto.png" alt="Logro 2">
                 <div class="tooltip">
-                    <strong>Triunfo el bien</strong><br>
-                         Gana 5 partidas como tripulante
+                    <strong>Oculto</strong><br>
+                         ???
                         </div>
             </div>
             <div class="achievement-card">
                 <img src="img/logros/infest/Oculto.png" alt="Logro 2">
                 <div class="tooltip">
-                    <strong>El soplon</strong><br>
-                         Acusa y haz<br>que expulsen<br>al en una partida
+                    <strong>Oculto</strong><br>
+                         ???
                         </div>
             </div>
             <div class="achievement-card">
                 <img src="img/logros/infest/Oculto.png" alt="Logro 2">
                 <div class="tooltip">
-                    <strong>Eres un hijo de...</strong><br>
-                         Acusa y haz que expulsen a 3 inocentes (Global)
+                    <strong>Oculto</strong><br>
+                         ???
                         </div>
             </div>
             <div class="achievement-card">
@@ -454,7 +453,7 @@
     <div class="achievement-group">
         <div class="group-header" onclick="toggleAchievements(this)">
             <img src="img/logros/infest/Oculto.png" alt="Evento 1" class="group-image">
-            <div class="group-title">Baronauta</div>
+            <div class="group-title">El juego ese acuatico</div>
         </div>
         <div class="group-content">
             <div class="achievement-card">
