--- a/miembros.html
+++ b/miembros.html
@@ -71,7 +71,7 @@
             font-weight: bold;
         }
         .studio-logo {
-            position: absolute;
+            position: fixed;
             top: 10px;
             center: 10px;
             width: 100px;
@@ -167,6 +167,13 @@
             </a>
         </div>
 
+<!-- Add more member cards as needed -->
+        <div class="members-container">
+        <div class="member-card">
+            <a href="perfiles/ChuyBc.html">
+                <div class="member-name">ChuyBc</div>
+            </a>
+        </div>
 
     </div>
 
