--- a/miembros.html
+++ b/miembros.html
@@ -122,7 +122,7 @@
 <!-- Add more member cards as needed -->
         <div class="members-container">
         <div class="member-card">
-            <a href="perfiles/Itzy0w0.html">
+            <a href="perfiles/Itzy.html">
                 <div class="member-name">ItzyOwO</div>
             </a>
         </div>
