--- a/perfiles/Darkplayer.html
+++ b/perfiles/Darkplayer.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Darkplayer97</title>
+    <title>Darkplayer1997</title>
     <style>
         body {
             margin: 0;
@@ -26,7 +26,6 @@
             transform: translateX(-100%);
             transition: transform 0.3s ease;
             padding-top: 60px;
-            z-index: 1000;
         }
         .navbar.show-navbar {
             transform: translateX(0);
@@ -50,6 +49,127 @@
             color: white;
             cursor: pointer;
         }
+        /*.profile-container {
+            margin-top: 60px;
+            width: 100%;
+            max-width: 800px;
+            text-align: center;
+        }*/
+        .profile-header {
+            background-color: #333;
+            border-radius: 10px;
+            padding: 20px;
+            margin-bottom: 20px;
+        }
+        .profile-name {
+            font-size: 28px;
+            font-weight: bold;
+        }
+        .profile-title {
+            font-size: 20px;
+            font-weight: normal;
+            color: #ffcc00;
+        }
+        .profile-details {
+            margin-top: 10px;
+            font-size: 16px;
+        }
+        
+        .event-title {
+            font-size: 22px;
+            font-weight: bold;
+            margin-bottom: 10px;
+        }
+        .achievements-section {
+            margin-top: 20px;
+            text-align: left;
+        }
+.achievement-group {
+    border: 1px solid #444;
+    border-radius: 10px;
+    margin-bottom: 20px;
+    overflow: hidden;
+}
+.group-header {
+    display: flex;
+    align-items: center;
+    padding: 10px;
+    cursor: pointer;
+    background-color: #333; /*cambiar color a dorado si desbloquearon todos los logros #e6b800*/
+}
+.group-image {
+    width: 50px;
+    height: 50px;
+    border-radius: 5px;
+    margin-right: 10px;
+}
+.group-title {
+    font-size: 18px;
+    color: white;
+}
+.group-content {
+    display: none; /* Oculta inicialmente */
+    padding: 10px;
+    background-color: #444;
+}
+.achievement-card {
+    display: inline-block;
+    width: 100px;
+    text-align: center;
+    margin: 5px;
+}
+.achievement-card img {
+    width: 50px;
+    height: auto;
+}
+
+.achievement-card {
+    position: relative; /* Necesario para posicionar el tooltip */
+    display: inline-block;
+    width: 100px;
+    text-align: center;
+    margin: 5px;
+    cursor: pointer; /* Opcional, para indicar que es interactivo */
+}
+
+.achievement-card img {
+    width: 100px; /* Tamaño ajustable de la imagen */
+    height: auto;
+    border-radius: 5px;
+}
+
+.tooltip {
+    visibility: hidden; /* Oculta por defecto */
+    background-color: rgba(0, 0, 0, 0.8); /* Fondo oscuro */
+    color: #fff; /* Texto blanco */
+    text-align: center;
+    padding: 5px;
+    border-radius: 5px;
+    position: absolute;
+    bottom: 110%; /* Posiciona el tooltip arriba de la imagen */
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 1;
+    white-space: nowrap; /* Evita que el texto se corte en varias líneas */
+    font-size: 12px;
+    transition: visibility 0.2s, opacity 0.2s;
+    opacity: 0; /* Inicialmente invisible */
+}
+
+.achievement-card:hover .tooltip {
+    visibility: visible; /* Muestra el tooltip al pasar el cursor */
+    opacity: 1; /* Aparece con una transición suave */
+}
+.studio-logo {
+            position: fixed;
+            top: 10px;
+            center: 10px;
+            width: 100px;
+            height: auto;
+        }
+
+ /*Nuevos*/
+ 
         .profile-container {
             width: 80%;
             max-width: 800px;
@@ -64,7 +184,7 @@
             width: 100%;
             height: 200px;
             border-radius: 5px;
-            background: url('img/TartasPo.jpeg') center/cover no-repeat;
+            background: url('img/skibidi.jpeg') center/cover no-repeat;
         }
         .profile-pic {
             width: 150px;
@@ -76,13 +196,14 @@
             left: 50%;
             transform: translateX(-50%);
         }
+
         .title-badge {
             position: relative;
-            bottom: -15px;
-            left: 50%;
+            bottom: -20px;
+            left: 55%;
             transform: translateX(-50%);
-            width: 50px;
-            height: 50px;
+            width: 40px;
+            height: 30px;
             padding-top: 30px;
             background: url('img/Muesca.png') center/cover no-repeat;
             cursor: pointer;
@@ -110,160 +231,18 @@
             font-size: 18px;
             color: #ffcc00;
             margin: 0 0 10px;
+            
         }
         .profile-info p {
             font-size: 14px;
             color: #ccc;
-        }
-        .achievements-section {
-            margin-top: 20px;
-            text-align: left;
-        }
-        .achievement-group {
-            border: 1px solid #444;
-            border-radius: 10px;
-            margin-bottom: 20px;
-            overflow: hidden;
-        }
-        .group-header {
-            display: flex;
-            align-items: center;
-            padding: 10px;
-            cursor: pointer;
-            background-color: #333;
-        }
-        .group-image {
-            width: 50px;
-            height: 50px;
-            border-radius: 5px;
-            margin-right: 10px;
-        }
-        .group-title {
-            font-size: 18px;
-            color: white;
-        }
-        .group-content {
-            display: none;
-            padding: 10px;
-            background-color: #444;
-        }
-        .achievement-card {
-            position: relative;
-            display: inline-block;
-            width: 100px;
-            text-align: center;
-            margin: 5px;
-            cursor: pointer;
-        }
-        .achievement-card img {
-            width: 100px;
-            height: auto;
-            border-radius: 5px;
-        }
-        .tooltip {
-            visibility: hidden;
-            background-color: rgba(0, 0, 0, 0.8);
-            color: #fff;
-            text-align: center;
-            padding: 5px;
-            border-radius: 5px;
-            position: absolute;
-            bottom: 110%;
-            left: 50%;
-            transform: translateX(-50%);
-            z-index: 1;
-            white-space: nowrap;
-            font-size: 12px;
-            transition: visibility 0.2s, opacity 0.2s;
-            opacity: 0;
-        }
-        .achievement-card:hover .tooltip {
-            visibility: visible;
-            opacity: 1;
-        }
-        .studio-logo {
-            position: fixed;
-            top: 10px;
-            center: 10px;
-            width: 100px;
-            height: auto;
-        }
-        /* Estilos para el inventario */
-        .inventory-section {
-            position: fixed;
-            right: 0;
-            top: 0;
-            width: 250px;
-            height: 100%;
-            background-color: #333;
-            overflow-y: auto;
-            padding-top: 60px;
-            z-index: 1000;
-            transform: translateX(100%);
-            transition: transform 0.3s ease;
-        }
-        .inventory-section.show-inventory {
-            transform: translateX(0);
-        }
-        .inventory-group {
-            border: 1px solid #444;
-            border-radius: 10px;
-            margin-bottom: 20px;
-            overflow: hidden;
-        }
-        .inventory-card {
-            position: relative;
-            display: inline-block;
-            width: 100px;
-            text-align: center;
-            margin: 5px;
-            cursor: pointer;
-        }
-        .inventory-card img {
-            width: 100px;
-            height: auto;
-            border-radius: 5px;
-        }
-        .inventory-card .tooltip {
-            visibility: hidden;
-            background-color: rgba(0, 0, 0, 0.8);
-            color: #fff;
-            text-align: center;
-            padding: 5px;
-            border-radius: 5px;
-            position: absolute;
-            bottom: 110%;
-            left: 50%;
-            transform: translateX(-50%);
-            z-index: 1;
-            white-space: nowrap;
-            font-size: 12px;
-            transition: visibility 0.2s, opacity 0.2s;
-            opacity: 0;
-        }
-        .inventory-card:hover .tooltip {
-            visibility: visible;
-            opacity: 1;
-        }
-        .inventory-toggle {
-            position: fixed;
-            top: 20px;
-            right: 20px;
-            font-size: 30px;
-            color: white;
-            cursor: pointer;
-            z-index: 1001;
-        }
 
-        .iconinv{
-            width: 25px;
-        }
     </style>
 </head>
 <body>
     <img src="img/TKORC.png" alt="Studio Logo" class="studio-logo">
+    <p></p>
     <div class="navbar-toggle" onclick="toggleNavbar()">☰</div>
-    <div class="inventory-toggle" onclick="toggleInventorySection()"> <img src="img/inv.png" class="iconinv"></div>
     <div class="navbar" id="navbar">
         <a href="../miembros.html">MIEMBROS</a>
         <a href="../eventos.html">EVENTOS</a>
@@ -271,55 +250,57 @@
     <div class="profile-container">
         <div class="profile-header">
             <div class="profile-cover"></div>
-            <img src="img/TartasP.jpeg" alt="Perfil" width="150" class="profile-pic">
+            <img src="img/Tartas.jpg" alt="Perfil" width="150" class="profile-pic">
             <div class="title-badge"></div>
-            <div class="profile-info">
-                <h1>Darkplayer97</h1>
-                <h2>----</h2>
-                <p>Desde: 23/01/2025</p>
-                <p>...</p>
-            </div>
+        <div class="profile-info">
+            <h1>Darkplayer1997</h1>
+            <h2>----</h2>
+            <p>Desde: 23/01/2025</p>
+            <p>Gamer de corazón aficionado a las pajas</p>
         </div>
+        </div>
+
+
         <div class="achievements-section">
-            <div class="achievement-group">
-                <div class="group-header" onclick="toggleAchievements(this)">
-                    <img src="img/Titulo.png" alt="Evento 1" class="group-image">
-                    <div class="group-title">I.N.F.E.S.T.</div>
-                </div>
-                <div class="group-content">
-                    <div class="achievement-card">
-                        <img src="img/logros/infest/Sobrevive 10 días - Bloqueado.png" alt="Logro 1">
-                        <div class="tooltip">
-                            <strong>Superviviente</strong><br>
-                            Sobrevive 1 días
+    <div class="achievement-group">
+        <div class="group-header" onclick="toggleAchievements(this)">
+            <img src="img/Titulo.png" alt="Evento 1" class="group-image">
+            <div class="group-title">I.N.F.E.S.T.</div>
+        </div>
+        <div class="group-content">
+            <div class="achievement-card">
+                <img src="img/logros/infest/Sobrevive 10 días - Bloqueado.png" alt="Logro 1">
+                <div class="tooltip">
+                    <strong>Superviviente</strong><br>
+                         Sobrevive 10 días
                         </div>
-                    </div>
-                    <div class="achievement-card">
-                        <img src="img/logros/infest/Sobrevive 15 días - Bloqueado.png" alt="Logro 2">
-                        <div class="tooltip">
-                            <strong>No es nada facil</strong><br>
-                            Sobrevive 3 días
+            </div>
+            <div class="achievement-card">
+                <img src="img/logros/infest/Sobrevive 15 días - Bloqueado.png" alt="Logro 2">
+                <div class="tooltip">
+                    <strong>No es nada facil</strong><br>
+                         Sobrevive 15 días
                         </div>
-                    </div>
-                    <div class="achievement-card">
+            </div>
+            <div class="achievement-card">
                 <img src="img/logros/infest/Sobrevive 25 días - Bloqueado.png" alt="Logro 2">
                 <div class="tooltip">
                     <strong>Puedo con mas...</strong><br>
-                         Sobrevive 6 días
+                         Sobrevive 25 días
                         </div>
             </div>
             <div class="achievement-card">
                 <img src="img/logros/infest/Sobrevive 30 días - Bloqueado.png" alt="Logro 2">
                 <div class="tooltip">
                     <strong>Nada me detiene</strong><br>
-                         Sobrevive 10 días
+                         Sobrevive 30 días
                         </div>
             </div>
             <div class="achievement-card">
-                <img src="img/logros/infest/Impecable - Bloqueado.png" alt="Logro 2">
+                <img src="img/logros/infest/Oculto.png" alt="Logro 2">
                 <div class="tooltip">
-                    <strong>Impecable</strong><br>
-                         No mueras ni una sola vez
+                    <strong>Oculto</strong><br>
+                         ???
                         </div>
             </div>
             <div class="achievement-card">
@@ -533,55 +514,15 @@
 </div>
 
     </div>
-                    <!-- Más logros aquí -->
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="inventory-section">
-        <div class="inventory-group">
-            <div class="group-header" onclick="toggleInventory(this)">
-                <img src="img/Tickets.png" alt="Inventario" class="group-image">
-                <div class="group-title">Tickets</div>
-            </div>
-            <div class="group-content">
-                <div class="inventory-card">
-                    <img src="img/items/Cupón Especial.png" alt="Item 1">
-                    <div class="tooltip">
-                        <strong>Ticket especial</strong><br>
-                        Servira para el futuro.
-                    </div>
-                </div>
-                <!--
-                <div class="inventory-card">
-                    <img src="img/items/item2.png" alt="Item 2">
-                    <div class="tooltip">
-                        <strong>Poción de Vida</strong><br>
-                        Restaura 50 puntos de salud.
-                    </div>
-                </div>
-                -->
-                <!-- Más items aquí -->
-            </div>
-        </div>
-    </div>
     <script>
         function toggleNavbar() {
             var navbar = document.getElementById('navbar');
             navbar.classList.toggle('show-navbar');
         }
         function toggleAchievements(header) {
-            const content = header.nextElementSibling;
-            content.style.display = content.style.display === "block" ? "none" : "block";
-        }
-        function toggleInventorySection() {
-            var inventory = document.querySelector('.inventory-section');
-            inventory.classList.toggle('show-inventory');
-        }
-        function toggleInventory(header) {
-            const content = header.nextElementSibling;
-            content.style.display = content.style.display === "block" ? "none" : "block";
-        }
+    const content = header.nextElementSibling;
+    content.style.display = content.style.display === "block" ? "none" : "block";
+}
     </script>
 </body>
 </html>
