--- a/perfiles/Roy.html
+++ b/perfiles/Roy.html
@@ -184,7 +184,7 @@
             width: 100%;
             height: 200px;
             border-radius: 5px;
-            background: url('img/skibidi.jpeg') center/cover no-repeat;
+            background: url('img/RoyPo.jpeg') center/cover no-repeat;
         }
         .profile-pic {
             width: 150px;
@@ -250,13 +250,14 @@
     <div class="profile-container">
         <div class="profile-header">
             <div class="profile-cover"></div>
-            <img src="img/Tartas.jpg" alt="Perfil" width="150" class="profile-pic">
+            <img src="img/RoyP.jpeg" alt="Perfil" width="150" class="profile-pic">
             <div class="title-badge"></div>
         <div class="profile-info">
             <h1>TheRoggers</h1>
             <h2>----</h2>
             <p>Desde: 23/01/2025</p>
-            <p>Soy furro</p>
+            <p>Someone's knockin' at the door
+Somebody's ringin' the bell</p>
         </div>
         </div>
 
