--- a/perfiles/Darkplayer.html
+++ b/perfiles/Darkplayer.html
@@ -64,7 +64,7 @@
             width: 100%;
             height: 200px;
             border-radius: 5px;
-            background: url('img/DarkPo.jpeg') center/cover no-repeat;
+            background: url('img/TartasPo.jpeg') center/cover no-repeat;
         }
         .profile-pic {
             width: 150px;
@@ -271,7 +271,7 @@
     <div class="profile-container">
         <div class="profile-header">
             <div class="profile-cover"></div>
-            <img src="img/DarkP.jpeg" alt="Perfil" width="150" class="profile-pic">
+            <img src="img/TartasP.jpeg" alt="Perfil" width="150" class="profile-pic">
             <div class="title-badge"></div>
             <div class="profile-info">
                 <h1>Darkplayer97</h1>
