--- a/perfiles/Aki.html
+++ b/perfiles/Aki.html
@@ -64,7 +64,7 @@
             width: 100%;
             height: 200px;
             border-radius: 5px;
-            background: url('img/AkiPo.jpg') center/cover no-repeat;
+            background: url('img/AkiPo.jpeg') center/cover no-repeat;
         }
         .profile-pic {
             width: 150px;
